--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -83,7 +83,7 @@ fa:
           answer: "در آلمان برای افرادی که احتیاج به کمک دارند٬ پیشنهادهای حمایتی زیادی وجود دارد.پیدا کردن این پیشنهادها معمولا بسیار سخت است چرا که اغلب نمی دانیم کجا و به چه کسانی دقیقا باید مراجعه کنیم.ما بدنبال تغییر این هستیم."
           question: "چرا clarat وجود دارد؟"
         question_3:
-          answer: "مشکل خود را درخواست کن و بگو کجا بدنبال کمک هستی.سپس پیشنهادهای مناسبی که نزدیک محل سکونت خود هست را جهت مراجعه پیدا می کنی و یا اینکه از طریق تلفن و اینترنت. %{ref_to_how_to_find_right_help} به تو دقیقا توضیح می دهیم چگونه بتوانی چیزی که به دنبالش هستی را به راحتی پیدا کنی.با کلیک کردن روی هر پیشنهادی ما به تو اطلاع می دهیم که در مرحله بعد باید چه کرد.مثلا اینکه آیا باید زنگ بزنی یا اینکه مراجعه حضوری داشته باشی."
+          answer: "مشکل خود را وارد کن و بگو کجا بدنبال کمک هستی.سپس پیشنهادهای مناسبی که نزدیک محل سکونت خود هست را جهت مراجعه پیدا می کنی و یا اینکه از طریق تلفن و اینترنت. %{ref_to_how_to_find_right_help} به تو دقیقا توضیح می دهیم چگونه بتوانی چیزی که به دنبالش هستی را به راحتی پیدا کنی.با کلیک کردن روی هر پیشنهادی به تو اطلاع می دهیم که در مرحله بعد باید چه کرد.مثلا اینکه آیا باید زنگ بزنی یا اینکه مراجعه حضوری داشته باشی."
           link_1:
             class: FAQ_anchor_link
             name: "اینجا"
@@ -94,7 +94,7 @@ fa:
           answer: |-
             clarat رایگان است و رایگان خواهد ماند.هر کسی می تواند بدون هزینه در <b>
             clarat family</b>به دنبال کمک برای کودکان٬جوانان و خانواده باشد.همچنین هر کسی می تواند بدون هزینه در <b>clarat refugees</b> به دنبال کمک برای پناهندگان باشد.
-          question: "آیا جستجو در clarat مجانی است؟"
+          question: "آیا جستجو در clarat رایگان است؟"
         question_5:
           answer: "جستجو در clarat گمنام انجام می شود.یدین معنی که هیچکس درclarat از نام و نشانی تو آگاهی ندارد."
           question: "آیا می توان گمنام در clarat جستجو کرد؟"
@@ -611,7 +611,7 @@ fa:
     categories_sidebar:
       all_categories: "همه طبقات"
     cookie_warning_html: |-
-      Cookies به ما در راه اندازی و آماده سازی صفحه کمک می کنند.با استفاده کردن از وب‌سایت موافقت خود را از اینکه ما Cookiesها اقرار داده را اعلام میکنی.
+      Cookies به ما در راه اندازی و آماده سازی صفحه کمک می کنند.با استفاده کردن از وب‌سایت موافقت خود از اینکه ما Cookiesها قرار داده اعلام میکنی.
       <a href="/refugees/datenschutzhinweise">Mehr</a>.
     geolocation:
       error: "موقعیت جغرافیایی شما را نتوانستیم پیدا کنیم.لطفا آن را تایپ کنید"
@@ -861,6 +861,16 @@ fa:
           link: "برای ما پیغام بنویسید"
           text: "صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم یا اینکه چیزی به درستی انجام نمی شود؟پس"
         unavailable_location_modal: "در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید."
+      nav_lang:
+        languages:
+          ar: 
+          de: 
+          en: 
+          fr: 
+          pl: 
+          ru: 
+          tr: 
+        title: 
       navigation:
         category_headline: "یا بدنبال طبقه بندی ها"
         claim:
@@ -1157,6 +1167,10 @@ fa:
       intro_second_part: "در ادامه شما را از روش٬هدف استفاده از اطلاعات شخصی فرد متقاضی آگاه خواهیم کرد.شما می توانید اطلاعات بیشتر در این ضمینه را از وبسایت ما بازخوانی کنید.clarat gGmbH آگاهی دادن در تغییرات اطلاعات را مشروط می داند.اگر پس از مدت طولانی از وبسایت ما دوباره بازدید می کنید به شما توصیه می شود مجدد موارد مربوط به حفاظت اطلاعات شخصی خود را فراخوانید."
       title: "حفاظت از اطلاعات"
     section_choice:
+      family:
+        title: 
+      refugees:
+        title: 
       title: "لطفا موضوع خود را از دنیای clarat انتخاب کنید"
     shared:
       address:
